--- a/demo.html
+++ b/demo.html
@@ -25,7 +25,7 @@
       function notify(){
         var title = document.getElementById('title').value;
         var desc = document.getElementById('desc').value;
-        createNotification(title, desc);
+        NotificationManager.create(title, desc);
       }
     </script>
 
